add hyper combos

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -679,6 +679,101 @@ ZMK_COMBO(c_rpar, &kp LC(RPAR), RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_gt, &kp LC(GT), RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
+// hyper combos
+// ****************************************************************************
+
+ZMK_COMBO(hyp_a, &kp LG(LA(LS(LC(A)))), RH2 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_b, &kp LG(LA(LS(LC(B)))), RH2 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_c, &kp LG(LA(LS(LC(C)))), RH2 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_d, &kp LG(LA(LS(LC(D)))), RH2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_e, &kp LG(LA(LS(LC(E)))), RH2 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_f, &kp LG(LA(LS(LC(F)))), RH2 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_g, &kp LG(LA(LS(LC(G)))), RH2 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_h, &kp LG(LA(LS(LC(H)))), RH2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_i, &kp LG(LA(LS(LC(I)))), RH2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_j, &kp LG(LA(LS(LC(J)))), RH2 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_k, &kp LG(LA(LS(LC(K)))), RH2 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_l, &kp LG(LA(LS(LC(L)))), RH2 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_m, &kp LG(LA(LS(LC(M)))), RH2 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_n, &kp LG(LA(LS(LC(N)))), RH2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_o, &kp LG(LA(LS(LC(O)))), RH2 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_p, &kp LG(LA(LS(LC(P)))), RH2 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_q, &kp LG(LA(LS(LC(Q)))), RH2 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_r, &kp LG(LA(LS(LC(R)))), RH2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_s, &kp LG(LA(LS(LC(S)))), RH2 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_t, &kp LG(LA(LS(LC(T)))), RH2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_u, &kp LG(LA(LS(LC(U)))), RH2 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_v, &kp LG(LA(LS(LC(V)))), RH2 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_w, &kp LG(LA(LS(LC(W)))), RH2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_x, &kp LG(LA(LS(LC(X)))), RH2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_y, &kp LG(LA(LS(LC(Y)))), RH2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_z, &kp LG(LA(LS(LC(Z)))), RH2 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_enter, &kp LG(LA(LS(LC(ENTER)))), RH2 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_tab, &kp LG(LA(LS(LC(TAB)))), RH2 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_esc, &kp LG(LA(LS(LC(ESC)))), RH2 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_space, &kp LG(LA(LS(LC(SPACE)))), RH2 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_bspc, &kp LG(LA(LS(LC(BSPC)))), RH2 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_up, &kp LG(LA(LS(LC(UP)))), RH2 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_down, &kp LG(LA(LS(LC(DOWN)))), RH2 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_left, &kp LG(LA(LS(LC(LEFT)))), RH2 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_right, &kp LG(LA(LS(LC(RIGHT)))), RH2 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_home, &kp LG(LA(LS(LC(HOME)))), RH2 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_end, &kp LG(LA(LS(LC(END)))), RH2 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_pg_up, &kp LG(LA(LS(LC(PG_UP)))), RH2 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_pg_dn, &kp LG(LA(LS(LC(PG_DN)))), RH2 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_0, &kp LG(LA(LS(LC(N0)))), RH2 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_1, &kp LG(LA(LS(LC(N1)))), RH2 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_2, &kp LG(LA(LS(LC(N2)))), RH2 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_3, &kp LG(LA(LS(LC(N3)))), RH2 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_4, &kp LG(LA(LS(LC(N4)))), RH2 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_5, &kp LG(LA(LS(LC(N5)))), RH2 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_6, &kp LG(LA(LS(LC(N6)))), RH2 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_7, &kp LG(LA(LS(LC(N7)))), RH2 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_8, &kp LG(LA(LS(LC(N8)))), RH2 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_9, &kp LG(LA(LS(LC(N9)))), RH2 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_f1, &kp LG(LA(LS(LC(F1)))), RH2 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_f2, &kp LG(LA(LS(LC(F2)))), RH2 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_f3, &kp LG(LA(LS(LC(F3)))), RH2 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_f4, &kp LG(LA(LS(LC(F4)))), RH2 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_f5, &kp LG(LA(LS(LC(F5)))), RH2 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_f6, &kp LG(LA(LS(LC(F6)))), RH2 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_f7, &kp LG(LA(LS(LC(F7)))), RH2 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_f8, &kp LG(LA(LS(LC(F8)))), RH2 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_f9, &kp LG(LA(LS(LC(F9)))), RH2 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_f10, &kp LG(LA(LS(LC(F10)))), RH2 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_f11, &kp LG(LA(LS(LC(F11)))), RH2 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_f12, &kp LG(LA(LS(LC(F12)))), RH2 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_semicolon, &kp LG(LA(LS(LC(SEMICOLON)))), RH2 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_colon, &kp LG(LA(LS(LC(COLON)))), RH2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_excl, &kp LG(LA(LS(LC(EXCL)))), RH2 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_dqt, &kp LG(LA(LS(LC(EXCL)))), RH2 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_at, &kp LG(LA(LS(LC(AT)))), RH2 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_hash, &kp LG(LA(LS(LC(HASH)))), RH2 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_dllr, &kp LG(LA(LS(LC(DLLR)))), RH2 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_prcnt, &kp LG(LA(LS(LC(PRCNT)))), RH2 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_caret, &kp LG(LA(LS(LC(CARET)))), RH2 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_amps, &kp LG(LA(LS(LC(AMPS)))), RH2 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_star, &kp LG(LA(LS(LC(STAR)))), RH2 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_tilde, &kp LG(LA(LS(LC(TILDE)))), RH2 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_grave, &kp LG(LA(LS(LC(GRAVE)))), RH2 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_bslh, &kp LG(LA(LS(LC(BSLH)))), RH2 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_pipe, &kp LG(LA(LS(LC(PIPE)))), RH2 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_under, &kp LG(LA(LS(LC(UNDER)))), RH2 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_minus, &kp LG(LA(LS(LC(MINUS)))), RH2 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_equal, &kp LG(LA(LS(LC(EQUAL)))), RH2 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_plus, &kp LG(LA(LS(LC(PLUS)))), RH2 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_slash, &kp LG(LA(LS(LC(SLASH)))), RH2 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hyp_rbrc, &kp LG(LA(LS(LC(RBRC)))), RH2 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_rbkt, &kp LG(LA(LS(LC(RBKT)))), RH2 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_lbrc, &kp LG(LA(LS(LC(LBRC)))), RH2 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_lbkt, &kp LG(LA(LS(LC(LBKT)))), RH2 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_lpar, &kp LG(LA(LS(LC(LPAR)))), RH2 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_lt, &kp LG(LA(LS(LC(LT)))), RH2 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_rpar, &kp LG(LA(LS(LC(RPAR)))), RH2 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_gt, &kp LG(LA(LS(LC(GT)))), RH2 RM2 RB3, ALL, COMBO_TERM_FAST)
+
+
+// ****************************************************************************
 // meh combos
 // ****************************************************************************
 
@@ -771,7 +866,6 @@ ZMK_COMBO(meh_lpar, &kp LA(LS(LC(LPAR))), LH2 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_lt, &kp LA(LS(LC(LT))), LH2 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_rpar, &kp LA(LS(LC(RPAR))), LH2 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_gt, &kp LA(LS(LC(GT))), LH2 RM2 RB3, ALL, COMBO_TERM_FAST)
-
 
 
 
