add alt+ctrl combos

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -867,6 +867,99 @@ ZMK_COMBO(meh_lt, &kp LA(LS(LC(LT))), LH2 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_rpar, &kp LA(LS(LC(RPAR))), LH2 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_gt, &kp LA(LS(LC(GT))), LH2 RM2 RB3, ALL, COMBO_TERM_FAST)
 
+// ****************************************************************************
+// alt+ctrl combos
+// ****************************************************************************
+
+ZMK_COMBO(ac_a, &kp LA(LC(A)), LH0 RH0 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_b, &kp LA(LC(B)), LH0 RH0 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_c, &kp LA(LC(C)), LH0 RH0 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_d, &kp LA(LC(D)), LH0 RH0 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_e, &kp LA(LC(E)), LH0 RH0 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_f, &kp LA(LC(F)), LH0 RH0 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_g, &kp LA(LC(G)), LH0 RH0 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_h, &kp LA(LC(H)), LH0 RH0 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_i, &kp LA(LC(I)), LH0 RH0 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_j, &kp LA(LC(J)), LH0 RH0 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_k, &kp LA(LC(K)), LH0 RH0 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_l, &kp LA(LC(L)), LH0 RH0 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_m, &kp LA(LC(M)), LH0 RH0 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_n, &kp LA(LC(N)), LH0 RH0 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_o, &kp LA(LC(O)), LH0 RH0 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_p, &kp LA(LC(P)), LH0 RH0 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_q, &kp LA(LC(Q)), LH0 RH0 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_r, &kp LA(LC(R)), LH0 RH0 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_s, &kp LA(LC(S)), LH0 RH0 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_t, &kp LA(LC(T)), LH0 RH0 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_u, &kp LA(LC(U)), LH0 RH0 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_v, &kp LA(LC(V)), LH0 RH0 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_w, &kp LA(LC(W)), LH0 RH0 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_x, &kp LA(LC(X)), LH0 RH0 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_y, &kp LA(LC(Y)), LH0 RH0 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_z, &kp LA(LC(Z)), LH0 RH0 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_enter, &kp LA(LC(ENTER)), LH0 RH0 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_tab, &kp LA(LC(TAB)), LH0 RH0 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_esc, &kp LA(LC(ESC)), LH0 RH0 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_space, &kp LA(LC(SPACE)), LH0 RH0 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_bspc, &kp LA(LC(BSPC)), LH0 RH0 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_up, &kp LA(LC(UP)), LH0 RH0 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_down, &kp LA(LC(DOWN)), LH0 RH0 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_left, &kp LA(LC(LEFT)), LH0 RH0 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_right, &kp LA(LC(RIGHT)), LH0 RH0 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_home, &kp LA(LC(HOME)), LH0 RH0 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_end, &kp LA(LC(END)), LH0 RH0 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_pg_up, &kp LA(LC(PG_UP)), LH0 RH0 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_pg_dn, &kp LA(LC(PG_DN)), LH0 RH0 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_0, &kp LA(LC(N0)), LH0 RH0 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_1, &kp LA(LC(N1)), LH0 RH0 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_2, &kp LA(LC(N2)), LH0 RH0 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_3, &kp LA(LC(N3)), LH0 RH0 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_4, &kp LA(LC(N4)), LH0 RH0 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_5, &kp LA(LC(N5)), LH0 RH0 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_6, &kp LA(LC(N6)), LH0 RH0 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_7, &kp LA(LC(N7)), LH0 RH0 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_8, &kp LA(LC(N8)), LH0 RH0 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_9, &kp LA(LC(N9)), LH0 RH0 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_f1, &kp LA(LC(F1)), LH0 RH0 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_f2, &kp LA(LC(F2)), LH0 RH0 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_f3, &kp LA(LC(F3)), LH0 RH0 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_f4, &kp LA(LC(F4)), LH0 RH0 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_f5, &kp LA(LC(F5)), LH0 RH0 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_f6, &kp LA(LC(F6)), LH0 RH0 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_f7, &kp LA(LC(F7)), LH0 RH0 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_f8, &kp LA(LC(F8)), LH0 RH0 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_f9, &kp LA(LC(F9)), LH0 RH0 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_f10, &kp LA(LC(F10)), LH0 RH0 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_f11, &kp LA(LC(F11)), LH0 RH0 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_f12, &kp LA(LC(F12)), LH0 RH0 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_semicolon, &kp LA(LC(SEMICOLON)), LH0 RH0 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_colon, &kp LA(LC(COLON)), LH0 RH0 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_excl, &kp LA(LC(EXCL)), LH0 RH0 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_dqt, &kp LA(LC(EXCL)), LH0 RH0 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_at, &kp LA(LC(AT)), LH0 RH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_hash, &kp LA(LC(HASH)), LH0 RH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_dllr, &kp LA(LC(DLLR)), LH0 RH0 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_prcnt, &kp LA(LC(PRCNT)), LH0 RH0 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_caret, &kp LA(LC(CARET)), LH0 RH0 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_amps, &kp LA(LC(AMPS)), LH0 RH0 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_star, &kp LA(LC(STAR)), LH0 RH0 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_tilde, &kp LA(LC(TILDE)), LH0 RH0 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_grave, &kp LA(LC(GRAVE)), LH0 RH0 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_bslh, &kp LA(LC(BSLH)), LH0 RH0 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_pipe, &kp LA(LC(PIPE)), LH0 RH0 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_under, &kp LA(LC(UNDER)), LH0 RH0 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_minus, &kp LA(LC(MINUS)), LH0 RH0 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_equal, &kp LA(LC(EQUAL)), LH0 RH0 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_plus, &kp LA(LC(PLUS)), LH0 RH0 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_slash, &kp LA(LC(SLASH)), LH0 RH0 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ac_rbrc, &kp LA(LC(RBRC)), LH0 RH0 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_rbkt, &kp LA(LC(RBKT)), LH0 RH0 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_lbrc, &kp LA(LC(LBRC)), LH0 RH0 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_lbkt, &kp LA(LC(LBKT)), LH0 RH0 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_lpar, &kp LA(LC(LPAR)), LH0 RH0 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_lt, &kp LA(LC(LT)), LH0 RH0 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_rpar, &kp LA(LC(RPAR)), LH0 RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_gt, &kp LA(LC(GT)), LH0 RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
 
 
 
