add alt+gui combos

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -962,6 +962,99 @@ ZMK_COMBO(ac_rpar, &kp LA(LC(RPAR)), LH0 RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_gt, &kp LA(LC(GT)), LH0 RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
 
 
+// ****************************************************************************
+// alt+gui combos
+// ****************************************************************************
+
+ZMK_COMBO(ag_a, &kp LG(LA(A)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_b, &kp LG(LA(B)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_c, &kp LG(LA(C)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_d, &kp LG(LA(D)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_e, &kp LG(LA(E)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f, &kp LG(LA(F)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_g, &kp LG(LA(G)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_h, &kp LG(LA(H)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_i, &kp LG(LA(I)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_j, &kp LG(LA(J)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_k, &kp LG(LA(K)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_l, &kp LG(LA(L)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_m, &kp LG(LA(M)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_n, &kp LG(LA(N)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_o, &kp LG(LA(O)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_p, &kp LG(LA(P)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_q, &kp LG(LA(Q)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_r, &kp LG(LA(R)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_s, &kp LG(LA(S)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_t, &kp LG(LA(T)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_u, &kp LG(LA(U)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_v, &kp LG(LA(V)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_w, &kp LG(LA(W)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_x, &kp LG(LA(X)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_y, &kp LG(LA(Y)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_z, &kp LG(LA(Z)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_enter, &kp LG(LA(ENTER)), LH0 LH1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_tab, &kp LG(LA(TAB)), LH0 LH1 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_esc, &kp LG(LA(ESC)), LH0 LH1 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_space, &kp LG(LA(SPACE)), LH0 LH1 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_bspc, &kp LG(LA(BSPC)), LH0 LH1 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_up, &kp LG(LA(UP)), LH0 LH1 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_down, &kp LG(LA(DOWN)), LH0 LH1 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_left, &kp LG(LA(LEFT)), LH0 LH1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_right, &kp LG(LA(RIGHT)), LH0 LH1 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_home, &kp LG(LA(HOME)), LH0 LH1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_end, &kp LG(LA(END)), LH0 LH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_pg_up, &kp LG(LA(PG_UP)), LH0 LH1 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_pg_dn, &kp LG(LA(PG_DN)), LH0 LH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_0, &kp LG(LA(N0)), LH0 LH1 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_1, &kp LG(LA(N1)), LH0 LH1 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_2, &kp LG(LA(N2)), LH0 LH1 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_3, &kp LG(LA(N3)), LH0 LH1 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_4, &kp LG(LA(N4)), LH0 LH1 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_5, &kp LG(LA(N5)), LH0 LH1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_6, &kp LG(LA(N6)), LH0 LH1 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_7, &kp LG(LA(N7)), LH0 LH1 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_8, &kp LG(LA(N8)), LH0 LH1 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_9, &kp LG(LA(N9)), LH0 LH1 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f1, &kp LG(LA(F1)), LH0 LH1 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f2, &kp LG(LA(F2)), LH0 LH1 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f3, &kp LG(LA(F3)), LH0 LH1 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f4, &kp LG(LA(F4)), LH0 LH1 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f5, &kp LG(LA(F5)), LH0 LH1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f6, &kp LG(LA(F6)), LH0 LH1 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f7, &kp LG(LA(F7)), LH0 LH1 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f8, &kp LG(LA(F8)), LH0 LH1 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f9, &kp LG(LA(F9)), LH0 LH1 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f10, &kp LG(LA(F10)), LH0 LH1 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f11, &kp LG(LA(F11)), LH0 LH1 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f12, &kp LG(LA(F12)), LH0 LH1 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_semicolon, &kp LG(LA(SEMICOLON)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_colon, &kp LG(LA(COLON)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_excl, &kp LG(LA(EXCL)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_dqt, &kp LG(LA(EXCL)), LH0 LH1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_at, &kp LG(LA(AT)), LH0 LH1 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_hash, &kp LG(LA(HASH)), LH0 LH1 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_dllr, &kp LG(LA(DLLR)), LH0 LH1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_prcnt, &kp LG(LA(PRCNT)), LH0 LH1 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_caret, &kp LG(LA(CARET)), LH0 LH1 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_amps, &kp LG(LA(AMPS)), LH0 LH1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_star, &kp LG(LA(STAR)), LH0 LH1 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_tilde, &kp LG(LA(TILDE)), LH0 LH1 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_grave, &kp LG(LA(GRAVE)), LH0 LH1 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_bslh, &kp LG(LA(BSLH)), LH0 LH1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_pipe, &kp LG(LA(PIPE)), LH0 LH1 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_under, &kp LG(LA(UNDER)), LH0 LH1 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_minus, &kp LG(LA(MINUS)), LH0 LH1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_equal, &kp LG(LA(EQUAL)), LH0 LH1 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_plus, &kp LG(LA(PLUS)), LH0 LH1 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_slash, &kp LG(LA(SLASH)), LH0 LH1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_rbrc, &kp LG(LA(RBRC)), LH0 LH1 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_rbkt, &kp LG(LA(RBKT)), LH0 LH1 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_lbrc, &kp LG(LA(LBRC)), LH0 LH1 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_lbkt, &kp LG(LA(LBKT)), LH0 LH1 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_lpar, &kp LG(LA(LPAR)), LH0 LH1 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_lt, &kp LG(LA(LT)), LH0 LH1 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_rpar, &kp LG(LA(RPAR)), LH0 LH1 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_gt, &kp LG(LA(GT)), LH0 LH1 RB3, ALL, COMBO_TERM_FAST)
 
 
 
