--- a/config/corne.conf
+++ b/config/corne.conf
@@ -8,6 +8,6 @@ CONFIG_ZMK_KEYBOARD_NAME="jerryCorne"
 CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
 
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=512
-CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=16
+CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=5
 
-CONFIG_HEAP_MEM_POOL_SIZE=8192
+#CONFIG_HEAP_MEM_POOL_SIZE=8192
