add alt+gui combos

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -962,4 +962,98 @@ ZMK_COMBO(ac_lt, &kp LA(LC(LT)), LH0 RH0 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_rpar, &kp LA(LC(RPAR)), LH0 RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_gt, &kp LA(LC(GT)), LH0 RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
 
+// ****************************************************************************
+// alt+gui combos
+// ****************************************************************************
+
+ZMK_COMBO(ag_a, &kp LA(LG(A)), LH0 LH1 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_b, &kp LA(LG(B)), LH0 LH1 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_c, &kp LA(LG(C)), LH0 LH1 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_d, &kp LA(LG(D)), LH0 LH1 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_e, &kp LA(LG(E)), LH0 LH1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f, &kp LA(LG(F)), LH0 LH1 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_g, &kp LA(LG(G)), LH0 LH1 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_h, &kp LA(LG(H)), LH0 LH1 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_i, &kp LA(LG(I)), LH0 LH1 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_j, &kp LA(LG(J)), LH0 LH1 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_k, &kp LA(LG(K)), LH0 LH1 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_l, &kp LA(LG(L)), LH0 LH1 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_m, &kp LA(LG(M)), LH0 LH1 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_n, &kp LA(LG(N)), LH0 LH1 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_o, &kp LA(LG(O)), LH0 LH1 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_p, &kp LA(LG(P)), LH0 LH1 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_q, &kp LA(LG(Q)), LH0 LH1 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_r, &kp LA(LG(R)), LH0 LH1 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_s, &kp LA(LG(S)), LH0 LH1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_t, &kp LA(LG(T)), LH0 LH1 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_u, &kp LA(LG(U)), LH0 LH1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_v, &kp LA(LG(V)), LH0 LH1 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_w, &kp LA(LG(W)), LH0 LH1 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_x, &kp LA(LG(X)), LH0 LH1 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_y, &kp LA(LG(Y)), LH0 LH1 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_z, &kp LA(LG(Z)), LH0 LH1 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_enter, &kp LA(LG(ENTER)), LH0 LH1 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_tab, &kp LA(LG(TAB)), LH0 LH1 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_esc, &kp LA(LG(ESC)), LH0 LH1 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_space, &kp LA(LG(SPACE)), LH0 LH1 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_bspc, &kp LA(LG(BSPC)), LH0 LH1 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_up, &kp LA(LG(UP)), LH0 LH1 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_down, &kp LA(LG(DOWN)), LH0 LH1 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_left, &kp LA(LG(LEFT)), LH0 LH1 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_right, &kp LA(LG(RIGHT)), LH0 LH1 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_home, &kp LA(LG(HOME)), LH0 LH1 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_end, &kp LA(LG(END)), LH0 LH1 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_pg_up, &kp LA(LG(PG_UP)), LH0 LH1 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_pg_dn, &kp LA(LG(PG_DN)), LH0 LH1 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_0, &kp LA(LG(N0)), LH0 LH1 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_1, &kp LA(LG(N1)), LH0 LH1 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_2, &kp LA(LG(N2)), LH0 LH1 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_3, &kp LA(LG(N3)), LH0 LH1 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_4, &kp LA(LG(N4)), LH0 LH1 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_5, &kp LA(LG(N5)), LH0 LH1 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_6, &kp LA(LG(N6)), LH0 LH1 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_7, &kp LA(LG(N7)), LH0 LH1 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_8, &kp LA(LG(N8)), LH0 LH1 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_9, &kp LA(LG(N9)), LH0 LH1 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f1, &kp LA(LG(F1)), LH0 LH1 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f2, &kp LA(LG(F2)), LH0 LH1 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f3, &kp LA(LG(F3)), LH0 LH1 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f4, &kp LA(LG(F4)), LH0 LH1 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f5, &kp LA(LG(F5)), LH0 LH1 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f6, &kp LA(LG(F6)), LH0 LH1 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f7, &kp LA(LG(F7)), LH0 LH1 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f8, &kp LA(LG(F8)), LH0 LH1 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f9, &kp LA(LG(F9)), LH0 LH1 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f10, &kp LA(LG(F10)), LH0 LH1 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f11, &kp LA(LG(F11)), LH0 LH1 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_f12, &kp LA(LG(F12)), LH0 LH1 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_semicolon, &kp LA(LG(SEMICOLON)), LH0 LH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_colon, &kp LA(LG(COLON)), LH0 LH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_excl, &kp LA(LG(EXCL)), LH0 LH1 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_dqt, &kp LA(LG(EXCL)), LH0 LH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_at, &kp LA(LG(AT)), LH0 LH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_hash, &kp LA(LG(HASH)), LH0 LH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_dllr, &kp LA(LG(DLLR)), LH0 LH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_prcnt, &kp LA(LG(PRCNT)), LH0 LH1 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_caret, &kp LA(LG(CARET)), LH0 LH1 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_amps, &kp LA(LG(AMPS)), LH0 LH1 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_star, &kp LA(LG(STAR)), LH0 LH1 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_tilde, &kp LA(LG(TILDE)), LH0 LH1 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_grave, &kp LA(LG(GRAVE)), LH0 LH1 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_bslh, &kp LA(LG(BSLH)), LH0 LH1 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_pipe, &kp LA(LG(PIPE)), LH0 LH1 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_under, &kp LA(LG(UNDER)), LH0 LH1 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_minus, &kp LA(LG(MINUS)), LH0 LH1 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_equal, &kp LA(LG(EQUAL)), LH0 LH1 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_plus, &kp LA(LG(PLUS)), LH0 LH1 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_slash, &kp LA(LG(SLASH)), LH0 LH1 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(ag_rbrc, &kp LA(LG(RBRC)), LH0 LH1 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_rbkt, &kp LA(LG(RBKT)), LH0 LH1 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_lbrc, &kp LA(LG(LBRC)), LH0 LH1 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_lbkt, &kp LA(LG(LBKT)), LH0 LH1 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_lpar, &kp LA(LG(LPAR)), LH0 LH1 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_lt, &kp LA(LG(LT)), LH0 LH1 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_rpar, &kp LA(LG(RPAR)), LH0 LH1 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_gt, &kp LA(LG(GT)), LH0 LH1 RM2 RB3, ALL, COMBO_TERM_FAST)
+
 /* vim: set ft=c tw=174RH1 : */
